# Development-and-Validation-of-an-AI-Assisted-System-for-Cancer-Detection-Using-Medical-Imaging

./: .gitignore  README.md  docker-compose.yml  render-start.sh  render.yaml
AI Training dataset/: README.md
Code/: .env.production.example  .gitignore  README.md  docker-compose.prod.yml  oncovision.db
ai/: pyproject.toml
ai/oncovision_ai/: __init__.py  base.py  classifiers.py  detectors.py  image_processor.py  overlay_generator.py  pipeline.py  segmenters.py  types.py
backend/: .env.example  .env.production.example  Dockerfile  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  routes.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  entities.py
backend/app/schemas/: __init__.py  api.py
backend/app/services/: ai_service.py  chat.py  cleanup.py  openai_responses.py  reporting.py  storage.py
docs/: architecture.md  deployment.md
frontend/: .env.production.example  Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/upload/: page.tsx
frontend/components/auth/: google-sign-in.tsx
frontend/components/layout/: app-shell.tsx
frontend/components/theme/: theme-sync.tsx
frontend/hooks/: use-auth-token.ts
frontend/lib/: api.ts  assets.ts
frontend/store/: use-app-store.ts
(+6 files in other folders)
